# SoDarkCalc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  sodark.h  utility.h
